Feature/un 75 conflict and mult sense output
